[package]
name = "vulkan_tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raw-window-handle = "0.5"
winit = { version = "0.29", default-features = false, features = ["rwh_05"] }
glam = { version = "0.24", features = ["bytemuck"] }
ash = { git = "https://github.com/ash-rs/ash.git", features = ["linked"] }
ash-window = { git = "https://github.com/ash-rs/ash.git" }
chrono = "0.4"
image = "0.24"

[features]
validation_layers = []

[build-dependencies]
shaderc = "0.8"
